Make TypeDefParser aware of a typeElement's elibility